mp2/feedback/grade.txt
 feedback for junzhou.21
g++ -std=c++1y  -c -g -O0 -Wall -Wextra -pedantic cs225/PNG.cpp
g++ -std=c++1y  -c -g -O0 -Wall -Wextra -pedantic cs225/HSLAPixel.cpp
g++ -std=c++1y  -c -g -O0 -Wall -Wextra -pedantic cs225/lodepng/lodepng.cpp
g++ -std=c++1y  -c -g -O0 -Wall -Wextra -pedantic Image.cpp
g++ -std=c++1y  -c -g -O0 -Wall -Wextra -pedantic StickerSheet.cpp
g++ -std=c++1y  -c -g -O0 -Wall -Wextra -pedantic main.cpp
g++ -std=c++1y  -c -g -O0 -Wall -Wextra -pedantic tests/unit_tests.cpp
tests/unit_tests.cpp:214:18: error: no member named 'getSticker' in 'StickerSheet'; did you mean 'getStiker'?
  REQUIRE( sheet.getSticker(3) == NULL );
                 ^~~~~~~~~~
                 getStiker
tests/catch.hpp:17670:90: note: expanded from macro 'REQUIRE'
#define REQUIRE( ... ) INTERNAL_CATCH_TEST( "REQUIRE", Catch::ResultDisposition::Normal, __VA_ARGS__  )
                                                                                         ^
tests/catch.hpp:2705:40: note: expanded from macro 'INTERNAL_CATCH_TEST'
        CATCH_INTERNAL_IGNORE_BUT_WARN(__VA_ARGS__); \
                                       ^
tests/catch.hpp:165:76: note: expanded from macro 'CATCH_INTERNAL_IGNORE_BUT_WARN'
#    define CATCH_INTERNAL_IGNORE_BUT_WARN(...) (void)__builtin_constant_p(__VA_ARGS__) /* NOLINT(cppcoreguidelines-pro-type-vararg, hicpp-vararg) */
                                                                           ^
tests/../StickerSheet.h:41:16: note: 'getStiker' declared here
        Image* getStiker(unsigned index) const;
               ^
tests/unit_tests.cpp:214:18: error: no member named 'getSticker' in 'StickerSheet'; did you mean 'getStiker'?
  REQUIRE( sheet.getSticker(3) == NULL );
                 ^~~~~~~~~~
                 getStiker
tests/catch.hpp:17670:90: note: expanded from macro 'REQUIRE'
#define REQUIRE( ... ) INTERNAL_CATCH_TEST( "REQUIRE", Catch::ResultDisposition::Normal, __VA_ARGS__  )
                                                                                         ^
tests/catch.hpp:2710:70: note: expanded from macro 'INTERNAL_CATCH_TEST'
            catchAssertionHandler.handleExpr( Catch::Decomposer() <= __VA_ARGS__ ); \
                                                                     ^
tests/../StickerSheet.h:41:16: note: 'getStiker' declared here
        Image* getStiker(unsigned index) const;
               ^
tests/unit_tests.cpp:214:18: error: no member named 'getSticker' in 'StickerSheet'; did you mean 'getStiker'?
  REQUIRE( sheet.getSticker(3) == NULL );
                 ^~~~~~~~~~
                 getStiker
tests/catch.hpp:17670:90: note: expanded from macro 'REQUIRE'
#define REQUIRE( ... ) INTERNAL_CATCH_TEST( "REQUIRE", Catch::ResultDisposition::Normal, __VA_ARGS__  )
                                                                                         ^
tests/catch.hpp:2714:56: note: expanded from macro 'INTERNAL_CATCH_TEST'
    } while( (void)0, (false) && static_cast<bool>( !!(__VA_ARGS__) ) )
                                                       ^
tests/../StickerSheet.h:41:16: note: 'getStiker' declared here
        Image* getStiker(unsigned index) const;
               ^
3 errors generated.
make: *** [unit_tests.o] Error 1
Compile Error! 

myImage.png is not found.

Total: 0
